--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1401,3 +1401,45 @@ Contact: tongt@hkbu.edu.hk},
 	year={2015},
 	publisher={Elsevier}
 }
+
+@article{gilron2017s,
+	title={What's in a pattern? Examining the type of signal multivariate analysis uncovers at the group level},
+	author={Gilron, Roee and Rosenblatt, Jonathan and Koyejo, Oluwasanmi and Poldrack, Russell A and Mukamel, Roy},
+	journal={NeuroImage},
+	volume={146},
+	pages={113--120},
+	year={2017},
+	publisher={Elsevier}
+}
+
+@article{timmer1995generating,
+	title={On generating power law noise.},
+	author={Timmer, J and K{\"o}nig, M},
+	journal={Astronomy and Astrophysics},
+	volume={300},
+	pages={707},
+	year={1995}
+}
+
+
+@article{thieler2016robper,
+	title={RobPer: An R Package to Calculate Periodograms for Light Curves Based on Robust Regression},
+	author={Thieler, Anita M and Fried, Roland and Rathjens, Jonathan and others},
+	journal={Journal of Statistical Software},
+	volume={69},
+	number={9},
+	pages={1--36},
+	year={2016}
+}
+
+
+@article{kasdin1995discrete,
+	title={Discrete simulation of colored noise and stochastic processes and 1/f/sup/spl alpha//power law noise generation},
+	author={Kasdin, N Jeremy},
+	journal={Proceedings of the IEEE},
+	volume={83},
+	number={5},
+	pages={802--827},
+	year={1995},
+	publisher={IEEE}
+}
